Remove outdated libraries from config.json

--- a/config.json
+++ b/config.json
@@ -7,13 +7,13 @@
         "Lua.diagnostics.disable": ["lowercase-global"],
         "Lua.runtime.version": "Lua 5.2",
         "Lua.runtime.builtin": {
-            "basic": "enable",
-            "builtin": "enable",
+            "basic": "disable",
+            "builtin": "disable",
             "math": "enable",
             "bit": "disable",
             "bit32": "enable",
             "coroutine": "enable",
-            "os": "enable",
+            "os": "disable",
             "debug": "disable",
             "ffi": "disable",
             "io": "disable",
