--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,12 @@
     "Lua.diagnostics.globals": [
         "Object"
     ],
-
+    "Lua.diagnostics.disable": [
+        "duplicate-doc-field",
+        "duplicate-doc-alias"
+    ],
+    "Lua.semantic.enable": true,
+    "window.autoDetectColorScheme": false,
+    "window.density.editorTabHeight": "compact",
+    "extensions.ignoreRecommendations": true,
 }
